--- a/MyProjects.html
+++ b/MyProjects.html
@@ -21,13 +21,13 @@ my projects tab
 	
 				<!-- Header -->
 					<header id="header">
-						<a href="AboutMe.html" class="logo">Chezer Banagua</a>
+						<a href="index.html" class="logo">Chezer Banagua</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="AboutMe.html">About me</a></li>
+							<li><a href="index.html">About me</a></li>
 							<li class="active"><a href="MyProjects.html">My Projects</a></li>
 						
 							
