--- a/MyProjects.html
+++ b/MyProjects.html
@@ -34,7 +34,7 @@ my projects tab
 						</ul>
 						<ul class="icons">
 			
-							<li><a href="https://github.com/Chezer8" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/ChezerB" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://linkedin.com/in/chezer-banagua" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 
 						</ul>
@@ -67,10 +67,10 @@ my projects tab
 										<h2>Database Design and Sql<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Chezer8/Database-Creation" class="image fit"><img src="images/erddiagram.jpg" alt="" /></a>
+									<a href="https://github.com/ChezerB/Database-Creation" class="image fit"><img src="images/erddiagram.jpg" alt="" /></a>
 									<p>A school project designing a database and insertion using sql for a small real estate agency </p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Chezer8/Database-Creation" class="button">View Github</a></li>
+										<li><a href="https://github.com/ChezerB/Database-Creation" class="button">View Github</a></li>
 									</ul>
 								</article>
 								<article>
@@ -78,10 +78,10 @@ my projects tab
 										
 										<h2>Exploring HTML</h2>
 									</header>
-									<a href="https://github.com/Chezer8/Web-Development-Assignments/tree/main/assignment3" class="image fit"><img src="images/html5.png" alt="" /></a>
+									<a href="assignment3/index.html" class="image fit"><img src="images/html5.png" alt="" /></a>
 									<p>A simple assignemnt to learn the fundamentals of html5</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Chezer8/Web-Development-Assignments/tree/main/assignment3" class="button">View Github</a></li>
+										<li><a href="https://github.com/ChezerB/Web-Development-Assignments/tree/main/assignment3" class="button">View Github</a></li>
 									</ul>
 								</article>
 							
@@ -89,10 +89,10 @@ my projects tab
 									<header>
 										<h2><a href="#">Forms</h2>
 									</header>
-									<a href="https://github.com/Chezer8/Web-Development-Assignments/tree/main/Assignment6" class="image fit"><img src="images/forms.png" alt="" /></a>
+									<a href="https://github.com/ChezerB/Web-Development-Assignments/tree/main/Assignment6" class="image fit"><img src="images/forms.png" alt="" /></a>
 									<p>Recieving data and posting it on httpbin</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Chezer8/Web-Development-Assignments/tree/main/Assignment6" class="button">View github</a></li>
+										<li><a href="https://github.com/ChezerB/Web-Development-Assignments/tree/main/Assignment6" class="button">View github</a></li>
 									</ul>
 								</article>
 								<article>
@@ -104,10 +104,11 @@ my projects tab
 									<a href="https://silly-albattani-829d3d.netlify.app" class="image fit"><img src="images/blogbootstrap.jpg" alt="" /></a>
 									<p>A simple blog post created using angular with a bootstrap template for my web programming course at Seneca College.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Chezer8/web422" class="button">View github</a></li>
+										<li><a href="https://github.com/ChezerB/web422" class="button">View github</a></li>
 									</ul>
 								</article>
-								<article>
+
+								<!-- <article>
 									<header>
 										<span class="date">April 11, 2017</span>
 										<h2><a href="#">Odio magna<br />
@@ -131,13 +132,14 @@ my projects tab
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
+								 -->
 							</section>
 
 						<!-- Footer -->
 						<!--
 							<footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>
+									<a href="#" class="previous">Prev</a>
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
@@ -169,7 +171,7 @@ my projects tab
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://linkedin.com/in/chezer-banagua" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/Chezer8" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/Chezerb" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
