--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							
 						</ul>
 						<ul class="icons">
-							<li><a href="https://github.com/Chezer8" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/ChezerB" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://linkedin.com/in/chezer-banagua" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 
 						</ul>
@@ -75,7 +75,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://linkedin.com/in/chezer-banagua" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/Chezer8" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/ChezerB" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
