--- a/MyProjects.html
+++ b/MyProjects.html
@@ -89,7 +89,7 @@ my projects tab
 									<header>
 										<h2><a href="#">Forms</h2>
 									</header>
-									<a href="assignment6/info.html" class="image fit"><img src="images/forms.png" alt="" /></a>
+									<a href="Assignment6/info.html" class="image fit"><img src="images/forms.png" alt="" /></a>
 									<p>Recieving data and posting it on httpbin</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/ChezerB/Web-Development-Assignments/tree/main/Assignment6" class="button">View github</a></li>
