--- a/Assignment6/info.html
+++ b/Assignment6/info.html
@@ -24,7 +24,7 @@
     <nav class="nav">
             <ul>
                 <li><a href="honesty.html">Home</a></li>
-                <li><a href="info.html">Information</a></li>
+                <li><a href="index.html">Information</a></li>
                
             </ul>
     </nav>
