--- a/MyProjects.html
+++ b/MyProjects.html
@@ -87,7 +87,7 @@ my projects tab
 							
 								<article>
 									<header>
-										<h2><a href="#">Forms</h2>
+										<h2>Forms</h2>
 									</header>
 									<a href="Assignment6/index.html" class="image fit"><img src="images/forms.png" alt="" /></a>
 									<p>Recieving data and posting it on httpbin</p>
@@ -98,7 +98,7 @@ my projects tab
 								<article>
 									<header>
 									
-										<h2><a href="#">First Blog Post<br />
+										<h2>First Blog Post<br />
 										</a></h2>
 									</header>
 									<a href="https://silly-albattani-829d3d.netlify.app" class="image fit"><img src="images/blogbootstrap.jpg" alt="" /></a>
