--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								</header>
 								
 								<p>I have graduated at Seneca College in the summer 2020 for Computer Programming and have learnt many programming languages such as C++, Java, JavaScript, HTML CSS, SQL, but I have also gained the skill to work coherently with a team. Currently, I am working as a production associate at Creation Technologies.
-								This past year has been tough for me in terms of obtaining a job and reigniting my interest in programming. Recently I have been doing self study on web development and data analyst.</p>
+								This past year has been tough for me in terms of obtaining a job and reigniting my interest in programming. Recently I have been doing lots of self study on web development and data analyst.</p>
 								<p>Things I like to do: Fishing, Sculpting, drawing, Coding, Web development, and videogames(but I rarely play anymore)
 						</section>
 
