--- a/MyProjects.html
+++ b/MyProjects.html
@@ -102,7 +102,7 @@ my projects tab
 										</a></h2>
 									</header>
 									<a href="https://silly-albattani-829d3d.netlify.app" class="image fit"><img src="images/blogbootstrap.jpg" alt="" /></a>
-									<p>A simple blog post created using angular with a bootstrap template for my web programming course at Seneca College.</p>
+									<p>A simple blog post created using angular with a bootstrap template for my web programming course at Seneca College.(I had lost access to the database that seneca provided)</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/ChezerB/web422" class="button">View github</a></li>
 									</ul>
